the meta refresh tag in  index.html.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AfterShock Calculator - GNS Science</title>
-    <meta http-equiv="refresh" content="0; url=AfterShock_Beta.html">
+    <!-- Remove the meta refresh tag -->
     <link rel="stylesheet" href="./bootstrap/bootstrap.v5.min.css">
     <link rel="stylesheet" href="bootstrap/geonet.v7.css">
   </head>
@@ -337,8 +337,9 @@
     <!-- Add Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     
-    <!-- Application Script -->
+    <!-- Application Scripts -->
     <script src="aftershock.js"></script>
+    <script type="module" src="js/main.js"></script>
     
     <!-- CSV Export Function -->
     <script>
